charon/tests/ui/regressions/inline-const-nonnull.out
disabled backtrace
error[E9999]: Supposely unreachable place in the Rust AST. The label is "scalar_int_to_constant_literal_ExpectedLiteralType".
              This error report happend because some assumption about the Rust AST was broken.
              
              Context:
               - ty: *const u8
               - ty_sinto: Ty {
                  kind: HashConsed(
                      RawPtr(
                          Ty {
                              kind: HashConsed(
                                  Uint(
                                      U8,
                                  ),
                              ),
                          },
                          Not,
                      ),
                  ),
              }
               - x: 0x0000000000000001
              
 --> tests/ui/regressions/inline-const-nonnull.rs:3:1
  |
3 | fn main() {
  | ^^^^^^^^^

error: Hax panicked when translating `const main::{constant#0}`.
 --> tests/ui/regressions/inline-const-nonnull.rs:4:5
  |
4 |     const { std::ptr::NonNull::<u8>::dangling() };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

ERROR Code failed to compile
