charon/tests/ui/regressions/inline-const-nonnull.rs
//@ known-failure

fn main() {
    const { std::ptr::NonNull::<u8>::dangling() };
}
